2002-11-24  Martin Baulig  <martin@ximian.com>

	* expression.cs (Cast.TryReduce): If we're in checked syntax,
	check constant ranges and report a CS0221.  Fixes #33186.

2002-11-24  Martin Baulig  <martin@ximian.com>

	* cs-parser.jay: Make this work for uninitialized variable
	declarations in the `for' initializer.  Fixes #32416.

2002-11-24  Martin Baulig  <martin@ximian.com>

	* ecore.cs (Expression.ConvertExplicit): Make casting from/to
	System.Enum actually work.  Fixes bug #32269, added verify-6.cs.

2002-11-24  Martin Baulig  <martin@ximian.com>

	* expression.cs (Binary.DoNumericPromotions): Added `check_user_conv'
	argument; if true, we also check for user-defined conversions.
	This is only needed if both arguments are of a user-defined type.
	Fixes #30443, added test-175.cs.
	(Binary.ForceConversion): Pass the location argument to ConvertImplicit.

	* ecore.cs (Expression.ImplicitUserConversionExists): New method.

2002-11-24  Martin Baulig  <martin@ximian.com>

	* expression.cs (ArrayAccess.GetStoreOpcode): New public static
	function to get the store opcode.
	(Invocation.EmitParams): Call ArrayAccess.GetStoreOpcode() and
	only emit the Ldelema if the store opcode is Stobj.  You must run
	both test-34 and test-167 to test this.  Fixes #34529.

2002-11-23  Martin Baulig  <martin@ximian.com>

	* ecore.cs (Expression.MemberLookup): Added additional
	`qualifier_type' argument which is used when we're being called
	from MemberAccess.DoResolve() and null if we're called from a
	SimpleName lookup.
	(Expression.MemberLookupFailed): New method to report errors; this
	does the CS1540 check and reports the correct error message.

	* typemanager.cs (MemberLookup): Added additional `qualifier_type'
	argument for the CS1540 check and redone the way how we're dealing
	with private members.  See the comment in the source code for details.
	(FilterWithClosure): Reverted this back to revision 1.197; renamed