@@ -1148,7 +1148,7 @@ namespace Mono.CSharp
 
 					return va != pp_unary (ref s);
 
-				}
+				} 
 			}
 
 			return va;
@@ -1165,7 +1165,7 @@ namespace Mono.CSharp
 				if (s [0] == '&'){
 					if (len > 2 && s [1] == '&'){
 						s = s.Substring (2);
-						return va && pp_eq (ref s);
+						return (va & pp_eq (ref s));
 					} else {
 						Error_InvalidDirective ();
 						return false;
@@ -1190,7 +1190,7 @@ namespace Mono.CSharp
 				if (c == '|'){
 					if (len > 2 && s [1] == '|'){
 						s = s.Substring (2);
-						return va || pp_and (ref s);
+						return va | pp_and (ref s);
 					} else {
 						Error_InvalidDirective ();
 						return false;
